<resources>
    <string name="app_name">SilverTouchApp</string>
    <string name="add_category">Add Category</string>
    <string name="add_contact">Add Contact</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="contact_list">Contact List</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email_id">Email Id</string>
    <string name="category_name">Category name</string>
    <string name="save">Save</string>
    <string name="contact_name">Contact name</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="search_contact">Search Contact</string>
    <string name="filter_contact">Filter Contact</string>
</resources>